보그 하단 스크롤 버튼 만들기

--- a/003.JS학습/RollingG.html
+++ b/003.JS학습/RollingG.html
@@ -26,6 +26,8 @@
 
         /* 갤러리 부모박스 */
         .wrap {
+            position: relative;
+            /* 부모자격 - #mini */
             width: 520px;
             margin: 0 auto;
             text-align: center;
@@ -60,6 +62,29 @@
         /* 처음에 멈춤버튼 숨기기 */
         .stop{
             display: none;
+        }
+        
+        /* 미니언즈 */
+        #mini{
+            position: absolute;
+            top: 80%;
+            left: -20%;
+            /* 부모는? #wrap */
+            width: 150px;
+            transform:rotate(720deg);
+            transition: all 1.5s ease-out;
+        }
+        /* 미니언즈 변경클래스1 */
+        #mini.on1{
+            top: 0;
+            left: 0;
+            transform:rotate(0deg);
+        }
+        /* 미니언즈 변경클래스2 */
+        #mini.on2{
+            top: 0;
+            left: 80%;
+            transform:rotate(-720deg);
         }
 
     </style>
@@ -198,12 +223,30 @@
                 /********************************************************************** 
                     [JS 타이밍 함수 : Timing Function]
 
-                    1.setInterval(함수,시잔)
+                    1.setInterval(함수,시간)
                     -일정시간 간격으로 함수를 호출!
                     -시간은 1/1000초, 단위안씀(예:1000->1초)
                     ->인터발함수를 지울때는 변수에 담고
                     아래 함수를 호출한다!
                     ->>> clearInterval(변수)
+                    ___________________________________________________________________
+
+                    2.setTimeout(함수,시간)
+                    -일정시간 후 한번만 함수를 호출!
+                    -시간은 1/1000초, 단위안씀(예:1000->1초)
+                    ->타임아웃함수를 지울때는 변수에 담고
+                    아래 함수를 호출한다!
+                    ->>> clearTimeout(변수)
+
+                    *******************************************************************
+
+                    [js 클래스 관련 내장함수]
+                    classlist
+                    -> 클래스를 요소에 넣거나 빼기위한 객체
+                    ((관련메서드))
+                    1.add(클래스명):클래스추가
+                    1.remove(클래스명):클래스제거
+                    1.toggle(클래스명):클래스추가/제거
 
                 **********************************************************************/
 
@@ -212,8 +255,62 @@
                 let abtn = document.querySelectorAll(".abtn button");
                 // console.log("자동버튼개수:",abtn.length);
 
+                // 인터발용 변수
+                let autoI;
+
                 // 자동넘김버튼 클릭시
-                abtn[0].onclick = () => {};
+                abtn[0].onclick = () => {
+                    // console.log("자동넘김!");
+
+                    // 자동넘김 버튼자신 숨기기
+                    // 자기자신 -> this 키워드
+                    // 화살표함수에서 this는 window이므로
+                    // event.currentTarget을 사용함!
+                    event.currentTarget.style.display = "none";
+
+                    // 멈춤버튼 보이기(원래 display값으로!)
+                    abtn[1].style.display = "inline-block";
+
+                    // 인터발셋팅 -> 변수에 담아야 지울수 있다!
+                    autoI = setInterval(() => {
+                        chgImg(1);
+                    },800);
+
+                }; ///////// click 함수 ///////////
+
+                // 멈춤버튼 클릭시 인터발지우기!
+                abtn[1].onclick = () => {
+                    // 자기자신 숨기기
+                    event.currentTarget.style.display = "none";
+                    // 자동넘김 버튼 보이기
+                    abtn[0].style.display = "inline-block";
+                    // 인터발지우기
+                    clearInterval(autoI);
+                };
+
+                // 타임아웃 함수로 미니언즈 애니하기!!!////////////////////////////////
+                // 원리 : 미리셋팅된 클래스를 미니언즈요소에
+                // 일정시간 후 넣고/빼고/넣기를 해준다!
+                // 변경대상:#mini
+                let mini = document.querySelector("#mini");
+
+                // 2초후 미니언즈에 class="on1" 넣기
+                setTimeout(()=>{
+                    mini.classList.add("on1");
+                },2000); //// 타임아웃 //////
+                // 4초후에 미니언즈에 class "on1" 빼기
+                setTimeout(()=>{
+                    mini.classList.remove("on1");
+                },4000);
+                // 6초후에 미니언즈에 class "on2" 빼기
+                setTimeout(()=>{
+                    mini.classList.toggle("on2");
+                },6000);
+                // 8초후에 미니언즈에 class "on1,on2" 빼기
+                setTimeout(()=>{
+                    mini.classList.toggle("on1");
+                    mini.classList.toggle("on2");
+                },8000);
 
 
             }); //////////////////load구역/////////////////////////////////////////////
@@ -238,6 +335,8 @@
         <a href="#" class="btn rb">
             <img src="./images/right_btn.png" alt="오른쪽버튼">
         </a>
+        <!-- 미니언즈 -->
+        <img src="./images/Minions.png" alt="미니언즈" id="mini">
     </div>
 
     <!-- 이미지별 설명 텍스트 출력박스 -->
