--- a/0000포트폴리오/index.html
+++ b/0000포트폴리오/index.html
@@ -73,6 +73,7 @@
     <div>
         <section class="cont cont1 ibx">
             <h2>상단 메인 배너</h2>
+            <div class="slideBox"></div>
         </section>
     </div>
     <!-- 컨텐츠2 -->
