--- a/001.HTML 학습/09.VOGUE_PJ/002.site/index.html
+++ b/001.HTML 학습/09.VOGUE_PJ/002.site/index.html
@@ -133,7 +133,7 @@
                 </div>
             </div>
             <!-- 컨텐츠 유형3 -->
-            <div class="pt3 rbx">
+            <div class="pt3 rbx scAct">
                 <div class="rbxIn fbx">
                     <div class="cbx bgi bg2">
                         <h2>안현모,홍지민,강주은 써마지 더 리얼 인터뷰</h2>
@@ -149,7 +149,7 @@
                 </div>
             </div>
             <!-- 컨텐츠 유형1 -->
-            <div class="pt1 rbx">
+            <div class="pt1 rbx scAct">
                 <div class="rbxIn">
                     <div class="cbx bgi bg5">
                         <h2>&lt;퀸스 갬빗&gt; 이후 엄청난 신작을 준비 중인 안야 테일러 조이</h2>
@@ -157,7 +157,7 @@
                 </div>
             </div>
             <!-- 컨텐츠 유형3 -->
-            <div class="pt3 rbx">
+            <div class="pt3 rbx scAct">
                 <div class="rbxIn fbx">
                     <div class="cbx bgi bg6">
                         <h2>마리아 그라치아 치우리의 디올 크루즈 2022 컬렉션 쇼</h2>
@@ -171,7 +171,7 @@
                 </div>
             </div>
             <!-- 컨텐츠 유형1 -->
-            <div class="pt1 rbx">
+            <div class="pt1 rbx scAct">
                 <div class="rbxIn">
                     <div class="cbx bgi bg9">
                         <h2>김여진이 감행하는 변화에 대하여</h2>
@@ -179,7 +179,7 @@
                 </div>
             </div>
             <!-- 컨텐츠 유형3 -->
-            <div class="pt3 rbx">
+            <div class="pt3 rbx scAct">
                 <div class="rbxIn fbx">
                     <div class="cbx bgi bg10">
                         <h2>모델 아이린이 선택한 여름 원피스 Best</h2>
@@ -193,7 +193,7 @@
                 </div>
             </div>
             <!-- 컨텐츠 유형3 -->
-            <div class="pt3 rbx">
+            <div class="pt3 rbx scAct">
                 <div class="rbxIn fbx">
                     <div class="cbx bgi bg13">
                         <h2>체커보드의 색다른 매력</h2>
