--- a/0000포트폴리오/index.html
+++ b/0000포트폴리오/index.html
@@ -210,8 +210,55 @@
     <!-- 3. 하단영역 -->
     <div>
         <footer class="info ibx">
-            <h2>하단영역</h2>
-
+            <!-- <h2>하단영역</h2> -->
+            <div class="blinkBox">
+                <ul class="blink">
+                    <li>
+                        <a href="#">소개</a>
+                    </li>
+                    <li>
+                        <a href="#">채용정보</a>
+                    </li>
+                    <li>
+                        <a href="#">이용 약관</a>
+                    </li>
+                </ul>
+                <ul class="blink">
+                    <li>
+                        <a href="#">연락처</a>
+                    </li>
+                    <li>
+                        <a href="#">개인정보 취급방침</a>
+                    </li>
+                    <li>
+                        <a href="#">보도자료</a>
+                    </li>
+                </ul>
+                <ul class="blink">
+                    <li>
+                        <a href="#">지속 가능성</a>
+                    </li>
+                    <li>
+                        <a href="#">재활용</a>
+                    </li>
+                    <li>
+                        <a href="#">이메일 설정</a>
+                    </li>
+                </ul>
+                <ul class="blink">
+                    <li>
+                        <a href="#">사이트맵</a>
+                    </li>
+                    <li>
+                        <a href="#">투자자</a>
+                    </li>
+                </ul>
+            </div>
+            <address class="addr">
+                ©2022 Logitech. All right reserved.
+                고객 지원 센터 (제품 및 A/S 문의처) / 전화 지원 (수신자부담) ㅣ사업자 등록번호: 107-86-10308 ㅣ로지텍 코리아 대표이사 : PAO, YA-CHINGㅣ서울특별시 영등포구
+                여의공원로 101, CCMM 빌딩 402B
+            </address>
         </footer>
     </div>
 
