--- a/004.jQuery학습/001.기본사용법/002.선택자메서드연습/jQuery-01.선택자연습/02.클래스선택자.html
+++ b/004.jQuery학습/001.기본사용법/002.선택자메서드연습/jQuery-01.선택자연습/02.클래스선택자.html
@@ -3,7 +3,46 @@
 <head>
 <meta charset="utf-8">
 <title> 클래스 선택자  </title>
-	
+<script src="jquery-3.6.0.min.js"></script>
+<script>
+  $(()=>{/////////jQB //////////////////////////
+
+    // 미션: 클래스가 .tit인 요소를 클릭하면
+    // .group인 요소의 하위 li를 순서대로
+    // 글자크기 50px 배경색 각각 lime,yellow,pink색으로
+    // 또한 margin-left값을 100px로 1초간격으로 변경되게 설정하시오!
+
+    $('.tit').click(()=>{
+      // 미션수행!
+      $('.group li:first-child').css({
+        fontSize: "50px",
+        backgroundColor: "lime",
+        marginLeft: "100px",
+        transition: "1s ease-in-out"
+      });///css//////////////
+      $('.group li:nth-child(2)').css({
+        fontSize: "50px",
+        backgroundColor: "yellow",
+        marginLeft: "100px",
+        transition: "1s ease-in-out 1s"
+      });///css//////////////
+      $('.group li:nth-child(3)').css({
+        fontSize: "50px",
+        backgroundColor: "pink",
+        marginLeft: "100px",
+        transition: "1s ease-in-out 2s"
+      });///css//////////////
+
+      $().css({
+        fontSize: "22px",
+        border:"10px dashed "
+      })
+
+
+    });////click //////////////////
+
+  });///////////jqb ///////////////////////////
+</script>
 	
 	
 </head>
@@ -13,7 +52,7 @@
 <div id="container">
 
  <header>
-   <h2> Welcome mySite </h2>
+   <h2 class="tit"> 여기를 과감하게 클릭하세요!!! </h2>
  </header>
 
  <nav>
