--- a/0000포트폴리오/index.html
+++ b/0000포트폴리오/index.html
@@ -255,9 +255,9 @@
                 </ul>
             </div>
             <address class="addr">
-                ©2022 Logitech. All right reserved.
-                고객 지원 센터 (제품 및 A/S 문의처) / 전화 지원 (수신자부담) ㅣ사업자 등록번호: 107-86-10308 ㅣ로지텍 코리아 대표이사 : PAO, YA-CHINGㅣ서울특별시 영등포구
-                여의공원로 101, CCMM 빌딩 402B
+                <p>©2022 Logitech. All right reserved.</p>
+                <p>고객 지원 센터 (제품 및 A/S 문의처) / 전화 지원 (수신자부담) ㅣ사업자 등록번호: 107-86-10308 ㅣ로지텍 코리아 대표이사 : PAO, YA-CHINGㅣ서울특별시 영등포구
+                여의공원로 101, CCMM 빌딩 402B</p> 
             </address>
         </footer>
     </div>
