포폴 슬라이드

--- a/0000포트폴리오/index.html
+++ b/0000포트폴리오/index.html
@@ -76,7 +76,14 @@
     <div>
         <section class="cont cont1 ibx">
             <!-- <h2>상단 메인 배너</h2> -->
-            <div class="slideBox"></div>
+            <div class="slideBox">
+                <ul id="slide">
+                    <li><img src="images/m650-hp-banner-desktop.jpg" alt="slide"></li>
+                    <li><img src="images/mx-keys-mini-bg-desktop.jpg" alt="slide"></li>
+                    <li><img src="images/pop-keys-hpb-desktop.jpg" alt="slide"></li>
+                    <li><img src="images/logi-dock-hpb-desktop.jpg" alt="slide"></li>
+                </ul>
+            </div>  
         </section>
     </div>
     <!-- 컨텐츠2 -->
@@ -177,8 +184,9 @@
     <!-- 컨텐츠6 -->
     <div>
         <section class="cont cont6 ibx">
-            <!-- <h2>SNS링크아이콘</h2> -->
+
             <div class="sns">
+                <a href="">Logitech 팔로우</a>
                 <a href="#" class="fi fi-instagram">
                     <span class="ir">
                         인스타그램
@@ -256,8 +264,9 @@
             </div>
             <address class="addr">
                 <p>©2022 Logitech. All right reserved.</p>
-                <p>고객 지원 센터 (제품 및 A/S 문의처) / 전화 지원 (수신자부담) ㅣ사업자 등록번호: 107-86-10308 ㅣ로지텍 코리아 대표이사 : PAO, YA-CHINGㅣ서울특별시 영등포구
-                여의공원로 101, CCMM 빌딩 402B</p> 
+                <p>고객 지원 센터 (제품 및 A/S 문의처) / 전화 지원 (수신자부담) ㅣ사업자 등록번호: 107-86-10308 ㅣ로지텍 코리아 대표이사 : PAO, YA-CHINGㅣ서울특별시
+                    영등포구
+                    여의공원로 101, CCMM 빌딩 402B</p>
             </address>
         </footer>
     </div>
