--- a/001.HTML 학습/09.VOGUE_PJ/002.site/index.html
+++ b/001.HTML 학습/09.VOGUE_PJ/002.site/index.html
@@ -10,6 +10,9 @@
     <!-- 폰티스트 아이콘 CDN CSS 불러오기 -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/fontisto@v3.0.4/css/fontisto/fontisto.min.css">
     <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/media.css">
+    <script src="js/jquery-3.6.0.min.js"></script>
+    <script src="js/jquery-ui.min.js"></script>
     <!-- 부드러운 스크롤 플러그인 -->
     <script src="js/smoothScroll20.js"></script>
     <!-- 공통 js -->
@@ -121,7 +124,108 @@
                     </li>
                 </ul>
             </nav>
+            <!-- header.top 안에 넣기 -->
+            <!-- 모바일용 햄버거버튼 -->
+            <a href="#" class="mobtn hbtn fi fi-nav-icon">
+                <span class="ir">GNB button</span>
+            </a>
+            <!-- 모바일용 검색버튼 -->
+            <a href="#" class="mobtn sbtn fi fi-search">
+                <span class="ir">search</span>
+            </a>
         </header>
+        <!-- header.top 바깥에 넣기(#top안에) -->
+
+        <!-- 1.4.모바일 검색박스 -->
+        <div class="mos">
+            <div class="mwrap">
+                <!-- 입력창박스 -->
+                <div id="search">
+                    <input type="text">
+                </div>
+                <!-- 검색버튼 -->
+                <button class="scbtn fi fi-search">
+                    <span class="ir">돋보기검색아이콘</span>
+                </button>
+            </div>
+        </div>
+
+        <!-- 1.5.모바일 전체메뉴 -->
+        <div class="mobwrap">
+            <div id="mobx">
+                <!-- 1.5-1.모바일 GNB 메뉴 -->
+                <nav class="mognb">
+                    <ul>
+                        <li>
+                            <a href="#">FASHION</a>
+                        </li>
+                        <li>
+                            <a href="#">BEAUTY</a>
+                        </li>
+                        <li>
+                            <a href="#">LIVING</a>
+                        </li>
+                        <li>
+                            <a href="#">PEOPLE</a>
+                        </li>
+                        <li>
+                            <a href="#">VIDEO</a>
+                        </li>
+                        <li>
+                            <a href="#">RUNWAY</a>
+                        </li>
+                        <li>
+                            <a href="#">SHOPPING</a>
+                        </li>
+                    </ul>
+                </nav>
+                <!-- 1.5-2.모바일 sns 메뉴 -->
+                <div class="mosns">
+                    <a href="#" class="fi fi-instagram">
+                        <span class="ir">인스타그램</span>
+                    </a>
+                    <a href="#" class="fi fi-facebook">
+                        <span class="ir">페이스북</span>
+                    </a>
+                    <a href="#" class="fi fi-twitter">
+                        <span class="ir">트위터</span>
+                    </a>
+                    <a href="#" class="fi fi-youtube-play">
+                        <span class="ir">유튜브</span>
+                    </a>
+                    <a href="#">
+                        <span class="ir">카카오스토리</span>
+                    </a>
+                </div>
+                <!-- 1.5-3.매거진박스 -->
+                <figure class="magbox">
+                    <!-- 잡지커버이미지 -->
+                    <a class="mcover" href="#">
+                        <img src="./images/cover.jpg" alt="보그표지">
+                    </a>
+                    <!-- 잡지설명 -->
+                    <figcaption>
+                        정기구독을 신청하면 최대 30% 할인혜택을 드립니다!
+                    </figcaption>
+                    <!-- 정기구독버튼 -->
+                    <button class="magbtn">정기구독 신청</button>
+                </figure>
+                <!-- 하단링크박스 -->
+                <ul class="moblink">
+                    <li>
+                        <a href="#">회사소개 /</a>
+                    </li>
+                    <li>
+                        <a href="#">광고 및 제휴 /</a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            <strong>개인정보 처리방침</strong>
+                        </a>
+                    </li>
+                </ul>
+            </div>
+        </div>
     </div>
     <!-- 2. 메인영역 -->
     <div>
@@ -218,7 +322,8 @@
                 <img src="images/footer_logo.png" alt="하단로고">
             </div>
             <!-- 3-2.회사주소 -->
-            <address class="addr">WWW.VOGUE.COM Ⓒ CONDÉNAST ASIA PACIFIC. INC. ALL RIGHTS RESERVED. VOGUE.COM KOREA IS OPERATED BY DOOSAN MAGAZINE.</address>
+            <address class="addr">WWW.VOGUE.COM Ⓒ CONDÉNAST ASIA PACIFIC. INC. ALL RIGHTS RESERVED. VOGUE.COM KOREA IS
+                OPERATED BY DOOSAN MAGAZINE.</address>
             <!-- 3-3.하단링크 -->
             <ul class="blink">
                 <li>
