--- a/0000포트폴리오/index.html
+++ b/0000포트폴리오/index.html
@@ -69,6 +69,9 @@
                 </ul>
             </nav>
             <!-- <h2>상단영역</h2> -->
+
+            <!-- 외부JS삽입 -->
+            <script src="js/main_unlimit.js"></script>
         </header>
     </div>
     <!-- 2. 메인영역 -->
@@ -83,7 +86,30 @@
                     <li><img src="images/pop-keys-hpb-desktop.jpg" alt="slide"></li>
                     <li><img src="images/logi-dock-hpb-desktop.jpg" alt="slide"></li>
                 </ul>
-            </div>  
+                <!--이동버튼-->
+                <a href="#" class="abtn ab1"><img src="images/left_btn.png" alt="왼쪽이동버튼"></a>
+                <a href="#" class="abtn ab2"><img src="images/right_btn.png" alt="오른쪽이동버튼"></a>
+
+                <!--블릿버튼-->
+                <ol class="indic">
+                    <li class="on">
+                        <img src="images/dot1.png" alt="흰색">
+                        <img src="images/dot2.png" alt="회색">
+                    </li>
+                    <li>
+                        <img src="images/dot1.png" alt="흰색">
+                        <img src="images/dot2.png" alt="회색">
+                    </li>
+                    <li>
+                        <img src="images/dot1.png" alt="흰색">
+                        <img src="images/dot2.png" alt="회색">
+                    </li>
+                    <li>
+                        <img src="images/dot1.png" alt="흰색">
+                        <img src="images/dot2.png" alt="회색">
+                    </li>
+                </ol>
+            </div>
         </section>
     </div>
     <!-- 컨텐츠2 -->
