--- a/0000포트폴리오/index.html
+++ b/0000포트폴리오/index.html
@@ -17,7 +17,7 @@
                 <ul>
                     <li>
                         <a href="#">
-                            <img src="./images/logitechg-overlay.svg" alt="">
+                            <img src="./images/logitechg-logo.png" alt="">
                         </a>
                     </li>
                     <li>
@@ -65,6 +65,7 @@
                         <a href="#">
                             검색
                         </a>
+                        <i class="fi fi-search"></i>
                     </li>
                 </ul>
             </nav>
@@ -82,10 +83,38 @@
             <div class="slideBox" >
                 
                 <ul id="slide">
-                    <li><img src="images/m650-hp-banner-desktop.jpg" alt="slide"></li>
-                    <li><img src="images/mx-keys-mini-bg-desktop.jpg" alt="slide"></li>
-                    <li><img src="images/pop-keys-hpb-desktop.jpg" alt="slide"></li>
-                    <li><img src="images/logi-dock-hpb-desktop.jpg" alt="slide"></li>
+                    <li>
+                        <div id="slideText">
+                            <h2>SIGNATURE M650</h2>
+                            <p>하루종일 편안함과 생산성을 누릴 수 있는 셋업으로 업그레이드해보세요.</p>
+                            <span>SIGNATURE M650</span>
+                        </div>
+                        <img src="images/m650-hp-banner-desktop.jpg" alt="slide">
+                    </li>
+                    <li>
+                        <div id="slideText">
+                            <h2>SIGNATURE M650</h2>
+                            <p>하루종일 편안함과 생산성을 누릴 수 있는 셋업으로 업그레이드해보세요.</p>
+                            <span>SIGNATURE M650</span>
+                        </div>
+                        <img src="images/mx-keys-mini-bg-desktop.jpg" alt="slide">
+                    </li>
+                    <li>
+                        <div id="slideText">
+                            <h2>SIGNATURE M650</h2>
+                            <p>하루종일 편안함과 생산성을 누릴 수 있는 셋업으로 업그레이드해보세요.</p>
+                            <span>SIGNATURE M650</span>
+                        </div>
+                        <img src="images/pop-keys-hpb-desktop.jpg" alt="slide">
+                    </li>
+                    <li>
+                        <div id="slideText">
+                            <h2>SIGNATURE M650</h2>
+                            <p>하루종일 편안함과 생산성을 누릴 수 있는 셋업으로 업그레이드해보세요.</p>
+                            <span>SIGNATURE M650</span>
+                        </div>
+                        <img src="images/logi-dock-hpb-desktop.jpg" alt="slide">
+                    </li>
                 </ul>
                 <!--이동버튼-->
                 <a href="#" class="abtn ab1"><img src="images/left_btn.png" alt="왼쪽이동버튼"></a>
@@ -146,25 +175,25 @@
                     <img src="./images/plp-tile-mice-g305.png" alt="">
                     <h3>LIGHTSPEED 무선</h3>
                     <p>무선의 혁명이란 바로 이것입니다. 앤드투엔드 혁명 덕택에, 이제 선 없이도 1ms 보고율 및 지연 없이 견고한 연결성을 경험할 수 있습니다.</p>
-                    <span>추가 정보</span>
+                    <span>추가 정보 > </span>
                 </div>
                 <div class="goods">
                     <img src="./images/plp-tile-ghub.png" alt="">
                     <h3>하나의 앱으로. 모든 기어 제어</h3>
                     <p>로지텍 G HUB는 지원하는 모든 로지텍 G 기어(마우스, 키보드, 헤드셋, 스피커 및 웹캠)를 최적화하고 커스터마이징할 수 있는 단일 포털을 제공합니다.</p>
-                    <span>추가 정보</span>
+                    <span>추가 정보 > </span>
                 </div>
                 <div class="goods">
                     <img src="./images/bestseller.jpg" alt="">
                     <h3>베스트셀러</h3>
                     <p>많은 선수들이 사랑하는 고성능 게이밍 장비로 멈추지 않는 플레이를 즐겨보세요.</p>
-                    <span>추가 정보</span>
+                    <span>추가 정보 > </span>
                 </div>
                 <div class="goods">
                     <img src="./images/plp-tile-keyboards-prox.png" alt="">
                     <h3>L게이밍 키보드</h3>
                     <p>속도. 정밀도. 내구성. 로지텍 G 게이밍 키보드는 높은 성능의 게이밍에 필요한 기술과 소재로 설계되었습니다.</p>
-                    <span>추가 정보</span>
+                    <span>추가 정보 > </span>
                 </div>
             </div>
         </section>
@@ -173,7 +202,11 @@
     <div>
         <section class="cont cont4 ibx">
             <!-- <h2>원드라이브 소개링크</h2> -->
-            <div class="oneriveBox"></div>
+            <div class="oneriveBox">
+                <h3>디자인 어워드</h3>
+                <p>디자인은 모든 팀과 규칙에 있어 로지텍이 하는 모든 것의 중심에 있습니다.</p>
+                <span>수상내역</span>
+            </div>
         </section>
     </div>
     <!-- 컨텐츠5 -->
@@ -243,7 +276,7 @@
         </section>
     </div>
     <!-- 3. 하단영역 -->
-    <div>
+    <div id="footer">
         <footer class="info ibx">
             <!-- <h2>하단영역</h2> -->
             <div class="blinkBox">
