--- a/002.CSS학습/DisplayGrid/grid2_Layout1.html
+++ b/002.CSS학습/DisplayGrid/grid2_Layout1.html
@@ -135,6 +135,43 @@
               자동으로 아랫줄로 떨어진다! grid-row를 따로 잡을 필요가 없다! 
               단, 별도의 위치를 세로방향으로 변경해할 경우 grid-row를 셋팅해 준다!
         */
+
+        /* 800px이하 미디어쿼리 */
+        @media screen and (max-width:800px) {
+            :root {
+                --ht1: 100px;
+                --ht2: 300px;
+                --ht3: 400px;
+            }
+            .side, .bnside, .bleft{
+                display: none;
+            }
+            .logo{
+                grid-column:1/5;
+            }
+            .gnb{
+                grid-column:5/13;
+            }
+            .ban{
+                grid-column:1/13;
+            }
+            .binfo{
+                grid-column:1/9;
+            }
+            .bright{
+                grid-column:9/13;
+            }
+        }/* 800px이하 */
+
+        /* 600px이하 */
+        @media screen and (max-width:600px){
+            .grid>div{
+                grid-column:1/13;
+            }
+        }
+
+
+
     </style>
 </head>
 
