js_onepage_autoscroll_fanal

--- a/004.jQuery학습/002.실전연습/01_SlideChangeStage/onePage.html
+++ b/004.jQuery학습/002.실전연습/01_SlideChangeStage/onePage.html
@@ -171,7 +171,7 @@
                 // e->이벤트 전달변수 하위 메서드로 사용함
 
                 // 1.클릭된 a요소의 href값 읽어오기
-                let link = $(this).attr("href")
+                let link = $(this).attr("href");
                 console.log("링크:",link);
 
                 // 2.해당 아이디요소의 위치 알아내기
@@ -192,7 +192,7 @@
                 // 참고)scrollLeft 는 가로스크롤 위치속성
                 $("html, body").animate({
                     scrollTop:pos+"px"
-                },700,"easeOutCirc")
+                },700,"easeOutCirc");
 
                 // 4.클릭된 a요소의 부모 li에 클래스on넣기
                 // ->css 셋팅에 현재위치 표시자
