--- a/0000포트폴리오/index.html
+++ b/0000포트폴리오/index.html
@@ -117,9 +117,10 @@
                     </li>
                 </ul>
                 <!--이동버튼-->
-                <a href="#" class="abtn ab1"><img src="images/left_btn.png" alt="왼쪽이동버튼"></a>
+                <a href="#" class="abtn ab1"></a>
                 <a href="#" class="abtn ab2"><img src="images/right_btn.png" alt="오른쪽이동버튼"></a>
-
+                <!-- <a class="leftbtn"></a> -->
+                
                 <!--블릿버튼-->
                 <ol class="indic">
                     <li class="on">
