--- a/0000포트폴리오/index.html
+++ b/0000포트폴리오/index.html
@@ -117,7 +117,7 @@
                     </li>
                 </ul>
                 <!--이동버튼-->
-                <a href="#" class="abtn ab1"></a>
+                <a href="#" class="abtn ab1">&lt;</a>
                 <a href="#" class="abtn ab2"><img src="images/right_btn.png" alt="오른쪽이동버튼"></a>
                 <!-- <a class="leftbtn"></a> -->
                 
