--- a/001.HTML 학습/09.VOGUE_PJ/002.site/login.html
+++ b/001.HTML 학습/09.VOGUE_PJ/002.site/login.html
@@ -240,28 +240,36 @@
 
             <section class="scont">
                 <!-- 아이디박스 -->
-                <div class="minput">
-                    <label for="min">아이디</label>
-                    <input type="text" id="mid" name="mid" maxlength="10" placeholder="아이디를 입력해 주세요">
-                </div>
-                <!-- 비밀번호박스 -->
-                <div class="minput">
-                    <label for="mpw">비밀번호</label>
-                    <input type="text" id="mpw" name="mpw" maxlength="10" placeholder="비밀번호를 입력해 주세요">
-                </div>
-                <!-- 버튼영역 -->
-                <div class="btns">
-                    <input type="submit" id="sbtn" value="LOGIN" class="btn btn-primary">
-                </div>
-                <!-- 기타링크영역 -->
-                <div class="addbx">
-                    <span>
-                        <input type="checkbox" id="chkbx" name="chkbx">
-                        <label for="chkbx">아이디저장</label>
-                    </span>
-                    <a href="#">아이디찾기</a> |
-                    <a href="#">비밀번호찾기</a> |
-                    <a href="#">회원가입</a>
+                <div id="login">
+                    <form action="process.php" method="post" class="logF">
+                        <!--
+                                action 전송할 페이지
+                                method 전송방식(POST 페이지로 전달)
+                        -->
+                        <div class="minput">
+                            <label for="min">아이디</label>
+                            <input type="text" id="mid" name="mid" maxlength="10" placeholder="아이디를 입력해 주세요">
+                        </div>
+                        <!-- 비밀번호박스 -->
+                        <div class="minput">
+                            <label for="mpw">비밀번호</label>
+                            <input type="text" id="mpw" name="mpw" maxlength="10" placeholder="비밀번호를 입력해 주세요">
+                        </div>
+                        <!-- 버튼영역 -->
+                        <div class="btns">
+                            <input type="submit" id="sbtn" value="LOGIN" class="btn btn-primary">
+                        </div>
+                        <!-- 기타링크영역 -->
+                        <div class="addbx">
+                            <span>
+                                <input type="checkbox" id="chkbx" name="chkbx">
+                                <label for="chkbx">아이디저장</label>
+                            </span>
+                            <a href="#">아이디찾기</a> |
+                            <a href="#">비밀번호찾기</a> |
+                            <a href="#">회원가입</a>
+                        </div>
+                    </form>
                 </div>
             </section>
 
