포폴 글자넣기 힘드네

--- a/0000포트폴리오/index.html
+++ b/0000포트폴리오/index.html
@@ -84,41 +84,41 @@
                 
                 <ul id="slide">
                     <li>
-                        <div id="slideText">
+                        <!-- <div id="slideText">
                             <h2>SIGNATURE M650</h2>
                             <p>하루종일 편안함과 생산성을 누릴 수 있는 셋업으로 업그레이드해보세요.</p>
                             <span>SIGNATURE M650</span>
-                        </div>
+                        </div> -->
                         <img src="images/m650-hp-banner-desktop.jpg" alt="slide">
                     </li>
                     <li>
-                        <div id="slideText">
+                        <!-- <div id="slideText">
                             <h2>SIGNATURE M650</h2>
                             <p>하루종일 편안함과 생산성을 누릴 수 있는 셋업으로 업그레이드해보세요.</p>
                             <span>SIGNATURE M650</span>
-                        </div>
+                        </div> -->
                         <img src="images/mx-keys-mini-bg-desktop.jpg" alt="slide">
                     </li>
                     <li>
-                        <div id="slideText">
+                        <!-- <div id="slideText">
                             <h2>SIGNATURE M650</h2>
                             <p>하루종일 편안함과 생산성을 누릴 수 있는 셋업으로 업그레이드해보세요.</p>
                             <span>SIGNATURE M650</span>
-                        </div>
+                        </div> -->
                         <img src="images/pop-keys-hpb-desktop.jpg" alt="slide">
                     </li>
                     <li>
-                        <div id="slideText">
+                        <!-- <div id="slideText">
                             <h2>SIGNATURE M650</h2>
                             <p>하루종일 편안함과 생산성을 누릴 수 있는 셋업으로 업그레이드해보세요.</p>
                             <span>SIGNATURE M650</span>
-                        </div>
+                        </div> -->
                         <img src="images/logi-dock-hpb-desktop.jpg" alt="slide">
                     </li>
                 </ul>
                 <!--이동버튼-->
                 <a href="#" class="abtn ab1"><i class="fi fi-angle-left"></i></a>
-                <a href="#" class="abtn ab2"><img src="images/right_btn.png" alt="오른쪽이동버튼"></a>
+                <a href="#" class="abtn ab2"><i class="fi fi-angle-right"></i></a>
                 <!-- <a class="leftbtn"></a> -->
                 
                 <!--블릿버튼-->
