--- a/004.jQuery학습/002.실전연습/03_Click_PhotoViewer/multi.html
+++ b/004.jQuery학습/002.실전연습/03_Click_PhotoViewer/multi.html
@@ -14,14 +14,19 @@
 
 		$(function () { ///// jQB ///////////////////////////
 
+			// a태그 기본기능 막기
+			$("a").click(function (e) {
+				e.preventDefault();
+			});//////////click /////////////////////
 
-			// 변경 대상: #viewer ul
-			let sbx = $("#viewer ul");
+
+			// 변경 대상: .viewer
+			let sbx = $(".viewer");
 
 			////////////// 블릿변경함수 /////////////
-			// 대상: #indic li
+			// 대상: .indic li
 			////////////////////////////////////////
-			let indic = $("#indic li");
+			let indic = $(".indic li");
 			/**************************************************** 
 				블릿변경함수
 			****************************************************/
@@ -40,17 +45,22 @@
 				예)data-seq="0"
 			****************************************************/
 
-			sbx.find("li").each((idx, ele) => {
+			sbx.find("ul").each((idx, ele) => {
 				// idx-순번,ele-요소자신
-				$(ele).attr("data-seq", idx);
+
+				// 각 ul 아래 li를 다시한번 each()로 돌아줌! 
+				$(ele).find("li").each((idx, ele) => {
+					$(ele).attr("data-seq", idx);
+
+				}); //////// each ////////////////////////////////
 			}); ///////// each //////////////////////////////////
 
 			//////////////////////[    1    ]///////////////////
 			// 오른쪽 이동버튼 클릭시 슬라이드박스 왼쪽으로 이동
 			// 이벤트 대상: .rb
 			// 이벤트: click
-			// 변경 대상: #viewer ul   -> sbx 변수에
-			// let sbx = $("#viewer ul");
+			// 변경 대상: .viewer ul   -> sbx 변수에
+			// let sbx = $(".viewer ul");
 			// 변경 내용: 슬라이드 박스의 left값을 -100%로 이동 후
 			//			첫번째 슬라이드를 맨끝으로 이동 + left:0
 			///////////////////////////////////////////////////
@@ -64,6 +74,13 @@
 				);
 				// 0.6초후 다시 해제! ////////////////////////
 				//////////////////////////////////////////////
+
+				// 변경 대상: .viewer ul
+				let sbx = $(this).parent().find(".viewer ul");
+				// $(this).parent()는 클릭된 버튼자신의 부모인 .slider
+
+				// 변경 대상: .indic li
+				let indic = $(this).parents(".slider").find(".indic li");
 
 				// 변경대상 left값 -100%로 변경하기
 				sbx.animate({
@@ -85,7 +102,10 @@
 				// 블릿변경함수를 호출함!
 				let num = sbx.find("li").eq(1).attr("data-seq");
 				console.log("순번:", num);
-				chgIndic(num);
+				// chgIndic(num);
+				// 블릿 직접변경하기!
+				indic.eq(num).addClass("on")
+					.siblings().removeClass("on");
 
 			}); /////////////////click /////////////////////////
 
@@ -94,7 +114,7 @@
 			// 왼쪽 이동버튼 클릭시 슬라이드박스 오른쪽으로 이동
 			// 이벤트 대상: .lb
 			// 이벤트: click
-			// 변경 대상: #viewer ul
+			// 변경 대상: .viewer ul
 			// 변경 내용: 마지막 슬라이드를 맨앞으로 이동 + left:-100%
 			//			슬라이드 박스 left:0으로 애니메이션!
 			///////////////////////////////////////////////////
@@ -108,6 +128,13 @@
 				);
 				// 0.6초후 다시 해제! ////////////////////////
 				//////////////////////////////////////////////
+
+				// 변경 대상: .viewer ul
+				let sbx = $(this).parent().find(".viewer ul");
+				// $(this).parent()는 클릭된 버튼자신의 부모인 .slider
+
+				// 변경 대상: .indic li
+				let indic = $(this).parents(".slider").find(".indic li");
 
 				// 1.마직막 슬라이드를 맨앞으로 이동 + left:-100%
 				sbx.prepend(sbx.find("li").last())
@@ -125,7 +152,10 @@
 				// 블릿변경함수를 호출함!
 				let num = sbx.find("li").eq(0).attr("data-seq");
 				console.log("순번:", num);
-				chgIndic(num);
+				// chgIndic(num);
+				// 블릿 직접변경하기!
+				indic.eq(num).addClass("on")
+					.siblings().removeClass("on");
 
 			});
 
@@ -137,10 +167,18 @@
 			// 이때 블릿을 클릭하면 그 블릿순번과 블릿li중 on이 
 			// 있는순번을 비교하여 슬라이드 이동방향을 결정한다!!!
 			///////////////////////////////////////////////////////
-			// 이벤트 대상: #indic li -> indic변수
+			// 이벤트 대상: .indic li -> indic변수
 			// 이벤트 종류: click 
 			///////////////////////////////////////////////////////
 			indic.click(function () {
+
+				// 변경 대상: .viewer ul
+				let sbx = $(this).parents(".slider").find(".viewer ul");
+				// $(this).parent()는 클릭된 버튼자신의 부모인 .slider
+				// 조상요소들 중 .slider 를선택
+
+				// 변경 대상: .indic li
+				let indic = $(this).parents(".slider").find(".indic li");
 
 				// 1.현재 클릭된 블릿순번
 				let cseq = $(this).index();
@@ -243,7 +281,10 @@
 					
 				*******************************************************/
 
-				chgIndic(cseq);
+				// chgIndic(cseq);
+				// 블릿 직접변경하기!
+				indic.eq(num).addClass("on")
+					.siblings().removeClass("on");
 
 			}); ///////////////click /////////////////////////////////
 
@@ -266,8 +307,8 @@
 			margin: 0;
 			padding: 0;
 			width: 100%;
-			height: 100%;
-			overflow: hidden;
+			/* height: 100%; */
+			/* overflow: hidden; */
 		}
 
 		body {
@@ -289,29 +330,29 @@
 		}
 
 		/* 슬라이드 전체박스 */
-		#slider {
+		.slider {
 			position: relative;
-			top: 50%;
-			transform: translateY(-50%);
+			/* top: 50%; */
+			/* transform: translateY(-50%); */
 			/* 세로중앙이동 */
 			width: 600px;
 			max-width: 90%;
 			/* 양쪽에 여백있게 */
-			margin: 0 auto;
+			margin: 50px auto;
 			/* 가로중앙 마영오! */
 			background-color: #FFF;
 			border: 2px solid #FDF6DD;
 		}
 
 		/* 가상요소로 비율밀기! */
-		#slider::before {
+		.slider::before {
 			content: '';
 			display: block;
 			margin-top: 60%;
 		}
 
 		/* 비율유지속박스 */
-		#viewer {
+		.viewer {
 			position: absolute;
 			top: 0;
 			left: 0;
@@ -321,14 +362,14 @@
 		}
 
 		/* 슬라이드 이동박스 */
-		#viewer ul {
+		.viewer ul {
 			position: relative;
 			/* 위치이동포지션 */
 			left: 0;
 			/* 기준위치값 */
 			display: flex;
 			/* 플랙스박스 */
-			width: 400%;
+			/* width: 400%; ->크기주지말것!! */
 			/* 사진4장 */
 			height: 100%;
 
@@ -338,12 +379,18 @@
 			list-style: none;
 		}
 
-		#viewer li {
-			flex: 1;
+		.viewer li {
+			/* flex: 1; */
+			flex-shrink: 0;
+			/* flex-shrink 기본값은 1즉, 줄어들어라!
+			이것을 0으로 해야 안줄어듬 */
+			flex-basis: 100%;
+			/* width와 같은 설정, flex에서 가로크기지정
+			100%는 부모박스에 가로크기 맞춤 */
 		}
 
 		/* 각 슬라이드 이미지 셋팅 */
-		#viewer li img {
+		.viewer li img {
 			width: 100%;
 			height: 100%;
 			object-fit: cover;
@@ -352,7 +399,7 @@
 
 
 		/* 블릿표시자 */
-		#indic {
+		.indic {
 			position: absolute;
 			bottom: 5px;
 			right: 5px;
@@ -365,7 +412,7 @@
 			list-style: none;
 		}
 
-		#indic li {
+		.indic li {
 			width: 16px;
 			height: 16px;
 			margin-right: 6px;
@@ -377,13 +424,13 @@
 		}
 
 		/* 마우스 오버시 + 선택메뉴 class="on" */
-		#indic li:hover,
-		#indic li.on {
+		.indic li:hover,
+		.indic li.on {
 			background-color: #222;
 			border: 2px solid lightgoldenrodyellow;
 		}
 
-		#indic li a {
+		.indic li a {
 			display: block;
 			width: 100%;
 			height: 100%;
@@ -437,10 +484,10 @@
 
 <body>
 
-	<div id="slider">
+	<div class="slider">
 
-		<!-- 슬라이드 속박스 -->
-		<div id="viewer">
+		<!-- 1.풍경 슬라이드 속박스 -->
+		<div class="viewer">
 			<!-- 슬라이드 이동박스 -->
 			<ul>
 				<li>
@@ -459,8 +506,108 @@
 		</div>
 
 		<!-- 블릿표시자 -->
-		<ul id="indic">
+		<ul class="indic">
 			<li class="on"><a href="#"><span class="bld">블릿</span></a></li>
+			<li><a href="#"><span class="bld">블릿</span></a></li>
+			<li><a href="#"><span class="bld">블릿</span></a></li>
+			<li><a href="#"><span class="bld">블릿</span></a></li>
+		</ul>
+
+		<!-- 양쪽이동버튼 -->
+		<a href="#" class="abtn lb">
+			<span class="ir">왼쪽이동버튼</span>
+		</a>
+		<a href="#" class="abtn rb">
+			<span class="ir">오른쪽이동버튼</span>
+		</a>
+
+
+
+	</div>
+	<div class="slider">
+
+		<!-- 2.영화 슬라이드 속박스 -->
+		<div class="viewer">
+			<!-- 슬라이드 이동박스 -->
+			<ul>
+				<li>
+					<img src="image/m1.jpg" alt="슬라이드">
+				</li>
+				<li>
+					<img src="image/m2.jpg" alt="슬라이드">
+				</li>
+				<li>
+					<img src="image/m3.jpg" alt="슬라이드">
+				</li>
+				<li>
+					<img src="image/m4.jpg" alt="슬라이드">
+				</li>
+				<li>
+					<img src="image/m5.jpg" alt="슬라이드">
+				</li>
+				<li>
+					<img src="image/m6.jpg" alt="슬라이드">
+				</li>
+				<li>
+					<img src="image/m7.jpg" alt="슬라이드">
+				</li>
+			</ul>
+		</div>
+
+		<!-- 블릿표시자 -->
+		<ul class="indic">
+			<li class="on"><a href="#"><span class="bld">블릿</span></a></li>
+			<li><a href="#"><span class="bld">블릿</span></a></li>
+			<li><a href="#"><span class="bld">블릿</span></a></li>
+			<li><a href="#"><span class="bld">블릿</span></a></li>
+			<li><a href="#"><span class="bld">블릿</span></a></li>
+			<li><a href="#"><span class="bld">블릿</span></a></li>
+			<li><a href="#"><span class="bld">블릿</span></a></li>
+		</ul>
+
+		<!-- 양쪽이동버튼 -->
+		<a href="#" class="abtn lb">
+			<span class="ir">왼쪽이동버튼</span>
+		</a>
+		<a href="#" class="abtn rb">
+			<span class="ir">오른쪽이동버튼</span>
+		</a>
+
+
+
+	</div>
+	<div class="slider">
+
+		<!-- 슬라이드 속박스 -->
+		<div class="viewer">
+			<!-- 슬라이드 이동박스 -->
+			<ul>
+				<li>
+					<img src="image/country1.jpg" alt="슬라이드">
+				</li>
+				<li>
+					<img src="image/country8.jpg" alt="슬라이드">
+				</li>
+				<li>
+					<img src="image/country15.jpg" alt="슬라이드">
+				</li>
+				<li>
+					<img src="image/country22.jpg" alt="슬라이드">
+				</li>
+				<li>
+					<img src="image/country29.jpg" alt="슬라이드">
+				</li>
+				<li>
+					<img src="image/country36.jpg" alt="슬라이드">
+				</li>
+			</ul>
+		</div>
+
+		<!-- 블릿표시자 -->
+		<ul class="indic">
+			<li class="on"><a href="#"><span class="bld">블릿</span></a></li>
+			<li><a href="#"><span class="bld">블릿</span></a></li>
+			<li><a href="#"><span class="bld">블릿</span></a></li>
 			<li><a href="#"><span class="bld">블릿</span></a></li>
 			<li><a href="#"><span class="bld">블릿</span></a></li>
 			<li><a href="#"><span class="bld">블릿</span></a></li>
