--- a/004.jQuery학습/002.실전연습/03_Click_PhotoViewer/index.html
+++ b/004.jQuery학습/002.실전연습/03_Click_PhotoViewer/index.html
@@ -213,6 +213,15 @@
 			///////////////////////////////////////////////////////
 			indic.click(function () {
 
+				/////////////////// 광클금지 /////////////////
+				if (sprot) return; //돌아가
+				sprot = 1; //잠금
+				setTimeout(() =>
+					sprot = 0, 600
+				);
+				// 0.6초후 다시 해제! ////////////////////////
+				//////////////////////////////////////////////
+
 				// 1.현재 클릭된 블릿순번
 				let cseq = $(this).index();
 				// current sequence(현재순번)
