--- a/0000포트폴리오/index.html
+++ b/0000포트폴리오/index.html
@@ -71,6 +71,8 @@
             </nav>
             <!-- <h2>상단영역</h2> -->
 
+            <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+            <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
             <!-- 외부JS삽입 -->
             <script src="js/main_unlimit.js"></script>
         </header>
