--- a/010.VueJS학습/002.데이터연습/real.html
+++ b/010.VueJS학습/002.데이터연습/real.html
@@ -63,6 +63,8 @@
 
             [배열일때]
             (값,순번) in 변수.data
+
+            v-if 디렉티브를 사용하여 조건에 맞을때만 출력!
          -->
         <li>
             <h2></h2>
